--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-swipeable": "^7.0.1",
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
+    "sharp": "^0.33.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
