--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-swipeable": "^7.0.1",
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
-    "sharp": "^0.33.3",
+    "sharp": "0.33.1",
     "typescript": "5.2.2",
     "uninstall": "^0.0.0",
     "uuid": "^9.0.1",
