Changed backend url

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ MONGO_URL=mongodb+srv://rafayNFT:NEXTNFTMARKETPLACE@cluster0.yu2oy8h.mongodb.net
 # MONGO_URL=mongodb://0.0.0.0:27017/
 # NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:3000/
 # NEXT_PUBLIC_BACKEND_BASE_URL=https://market-place-next-js.vercel.app/
-NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:3000/
+NEXT_PUBLIC_BACKEND_BASE_URL=https://nftmarketplace.ejoe.network/
 # NEXT_PUBLIC_BACKEND_BASE_URL=https://cryptocrunchers.net/
 NEXTAUTH_SECRET="SHA256:QNATq7h+L0sq5YUmKBRQ52u8Oq6W51twt1dDcQ6/Agg"
 NODE_ENV=development
